# publications

./: .gitignore  README.md  pubs.bib  tueai_publications.bib  tueai_publications.json
.github/workflows/: build-ci-image.yml  check-scheduled.yml  check.yml  compile-artifacts.yml  normalize.yml  pr-checks.yml  publish-artifacts.yml  regenerate-mirror.yml  release.yml
entries/2019/: abbati_ares_2019.bib  abdulsamad_model-based_2019.bib  ahmad_aircap_2019.bib  akata_label-embedding_2019.bib  akrour_projections_2019.bib  analytis_make-or-break_2019.bib  andriushchenko_provably_2019.bib  ansuini_intrinsic_2019.bib  arvanitidis_fast_2019.bib  babbar_data_2019.bib  bamler_augmenting_2019.bib  bamler_quantum_2019.bib  bamler_tightening_2019.bib  barrett_analyzing_2019.bib  bartels_probabilistic_2019.bib  bauer_advances_2019.bib  bauer_resampled_2019.bib  becker-ehmck_switching_2019.bib  behl_pointflownet_2019.bib  bellet_human-level_2019.bib  belousov_belief_2019.bib  belousov_building_2019.bib  belousov_entropic_2019.bib  berens_proprietary_2019.bib  besserve_exploiting_2019.bib  bethge_lack_2019.bib  blaes_control_2019.bib  blobaum_analysis_2019.bib  boelts_comparing_2019.bib  bogomolov_falsification_2019.bib  borowski_notorious_2019.bib  borowski_reproducing_2019.bib  bradshaw_model_2019.bib  brandherm_learning_2019.bib  brendel_accurate_2019.bib  brendel_adversarial_2019.bib  brendel_approximating_2019.bib  buchler_robot_2019.bib  cadena_deep_2019.bib  cadena_how_2019.bib  (+262 more)
entries/2020/: abati_2019_2020.bib  abdulsamad_hierarchical_2020.bib  abdulsamad_learning_2020.bib  abraham_crackovid_2020.bib  aghaeifar_32-channel_2020.bib  agudelo-espana_bayesian_2020.bib  agudelo-espana_real-robot_2020.bib  akata_research_2020.bib  alhaija_intrinsic_2020.bib  alimisis_continuous-time_2020.bib  almeida_santos_decentralized_2020.bib  andriushchenko_european_2020.bib  andriushchenko_square_2020.bib  angelis_sleipnir_2020.bib  armanious_independent_2020.bib  augustin_adversarial_2020.bib  ayhan_expert-validated_2020.bib  bachmann_constant_2020.bib  baden_near-optimal_2020.bib  baden_understanding_2020.bib  badirli_bayesian_2020.bib  balog_converting_2020.bib  bamler_extreme_2020.bib  bartels_conjugate_2020.bib  bause_impact_2020.bib  becigneul_geometry_2020.bib  behl_label_2020.bib  bengio_meta-transfer_2020.bib  bengio_predicting_2020.bib  berens_potential_2020.bib  bernaerts_sparse_2020.bib  besserve_assaying_2020.bib  besserve_counterfactuals_2020.bib  bitterwolf_certifiably_2020.bib  black_machine_2020-1.bib  black_machine_2020.bib  black_method_2020.bib  black_system_2020.bib  bordt_when_2020.bib  borowski_exemplary_2020.bib  (+270 more)
entries/2021/: abdulsamad_distributionally_2021.bib  abraham_bloom_2021.bib  adam_impact_2021.bib  adamczewski_dirichlet_2021.bib  agudelo-espana_shallow_2021.bib  ahmed_causalworld_2021.bib  akata_computer_2021.bib  akata_pattern_2021.bib  alaniz_learning_2021.bib  allshire_transferring_2021.bib  amini_enhancing_2021.bib  armanious_age-net_2021.bib  armanious_uncertainty-based_2021.bib  arvanitidis_geometrically_2021.bib  arvanitidis_pulling_2021.bib  augustin_out-distribution_2021.bib  badirli_classifying_2021.bib  (+334 more)
groups/: README.md
schema/: sidecar.schema.json
tools/: Dockerfile.ci  README.md  check_store.py  normalize_store.py  pyproject.toml  sidecar_schema.py
tools/publication_store/: __init__.py  _github.py  artifacts.py  blacklist.py  checker.py  diff_job.py  emit.py  entry.py  groups.py  publish.py  rdf_bridge.py  sidecar.py  store.py  sweep.py  zotero_bridge.py
tools/tests/: conftest.py  test_artifacts.py  test_blacklist.py  test_emit.py  test_partb_symlink_mirror.py  test_pr10_sibling_sidecar.py  test_pr11_malformed_and_undated.py  test_pr12_closure_strays.py  test_pr13_rename_relocate.py  test_pr14_group_drop.py  test_pr1_drop_rename.py  test_pr2_multi_paste.py  test_pr3_idempotent.py  test_pr4_relocate_carry.py  test_pr5_orphan_sidecar.py  test_pr6_cross_shard_dup.py  test_pr7_flat_sidecar.py  test_pr8_same_shard_dup.py  test_pr9_batch_dup.py  test_publish.py  test_rdf_bridge.py  test_store_loader.py  test_sweep.py  test_zotero_bridge.py
tools/tests/fixtures/partb/: paper_a.bib  paper_b.bib
tools/tests/fixtures/pr1/: drop.bib
tools/tests/fixtures/pr10/: drop.bib  drop.json
tools/tests/fixtures/pr11/: malformed.bib  undated.bib
tools/tests/fixtures/pr13/: base.bib  base.json  edited.bib
tools/tests/fixtures/pr14/: changed.bib
tools/tests/fixtures/pr2/: paste.bib
tools/tests/fixtures/pr3/: lu_can_2025.bib  lu_can_2025.json
tools/tests/fixtures/pr4/: base.json  edited.bib
tools/tests/fixtures/pr5/: base.bib  base.json  moved.bib
tools/tests/fixtures/pr6/: dup_drop.bib  existing.bib
tools/tests/fixtures/pr7/: entry.bib  flat.json
tools/tests/fixtures/pr8/: dup_drop.bib
tools/tests/fixtures/pr9/: first.bib  second.bib
(+7624 files in other folders)
