[project]
name = "publication-store"
version = "0.1.0"
description = "Deterministic, secret-free CLIs that keep the publication store in canonical form (S1–S5)."
requires-python = ">=3.13"
dependencies = [
    # The round-trip the jobs are built on (from_bibtex / to_bibtex). The
    # distribution name is `zotero-rdf`; the repo is `zotero-rdf-python`.
    # Pin to a tag/commit once the upstream repo carries one.
    "zotero-rdf @ git+https://gitlab.mlcloud.uni-tuebingen.de/robin.ruff/zotero-rdf-python.git",
    # Validates sidecars against schema/sidecar.schema.json (the public contract).
    "jsonschema>=4",
    # pubstore-publish: drives the store repo via the GitHub Git Data API (no clone)
    # and mints App-installation auth in-process (vendors the JWT handling, so no
    # separate PyJWT). Only pubstore-publish imports it, and lazily.
    "PyGithub>=2",
]

[project.optional-dependencies]
# Manual-only developer harness: `pip install -e tools/[test]` then `pytest tools/tests`.
# Deliberately not wired into any CI — the store gate that runs in CI is pubstore-check.
test = ["pytest>=8"]

[project.scripts]
# Per-MR diff job (mutating): normalize the changed .bib files into the store.
pubstore-normalize = "publication_store.diff_job:main"
# Full-store gate (read-only): verify S1–S5 across the whole store.
pubstore-check = "publication_store.checker:main"
# Add-on (read-only): compile joined build artifacts (all.bib / <group>.bib / meta.json).
pubstore-compile = "publication_store.artifacts:main"
# Producer (mutating, remote): one branch + PR per item against the store repo.
pubstore-publish = "publication_store.publish:main"
# Add-on: group directories. `associate` (per-MR diff job) unions a groups/<slug>/ drop's
# slug into the entry's custom.groups (the source of truth); `rebuild-mirror` (its own
# push-to-main workflow) regenerates the groups/<slug>/ symlink browse mirror from it.
pubstore-groups = "publication_store.groups:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# zotero-rdf is pinned by a direct git reference (no PyPI release yet).
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["publication_store"]
